--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.url=jdbc:h2:mem:librarydb
 spring.datasource.driverClassName=org.h2.Driver
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-spring.datasource.password=${DB_PASSWORD:defaultPassword}
+spring.datasource.password=${DB_PASSWORD:}
 
 # JPA/Hibernate
 spring.jpa.show-sql=true
