--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,19 @@
 server.port=8080
 
 # Adatbázis (H2 in-memory)
+# src/main/resources/application.properties
+
+# H2 adatbázis
 spring.datasource.url=jdbc:h2:mem:librarydb
 spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# H2 konzol engedélyezése (http://localhost:8080/h2-console)
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-spring.datasource.password=${DB_PASSWORD:}
 
-# JPA/Hibernate
+# JPA beállítások
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
