--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,19 @@
-# Szerver beállítások
+# Szerver
 server.port=8080
 
-# Adatbázis (H2 in-memory)
-# src/main/resources/application.properties
+# database (H2 in-memory)
 
-# H2 adatbázis
+# H2 db
 spring.datasource.url=jdbc:h2:mem:librarydb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
-# H2 konzol engedélyezése (http://localhost:8080/h2-console)
+# H2 konzol  (http://localhost:8080/h2-console)
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-# JPA beállítások
+# JPA
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
