--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,17 @@
-# Szerver
-server.port=8080
-
-# database (H2 in-memory)
-
-# H2 db
 spring.datasource.url=jdbc:h2:mem:librarydb
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
+spring.datasource.username=SA
 spring.datasource.password=
 
-# H2 konzol  (http://localhost:8080/h2-console)
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-# JPA
-spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.defer-datasource-initialization=true
+
+server.port=8080
+logging.level.org.example=INFO
+
+spring.jackson.serialization.fail-on-empty-beans=false
